--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ ul, .auth {
 
 html {
   box-sizing: border-box;
+  cursor: default;
 }
 
 *,
@@ -65,13 +66,6 @@ html {
 body {
   background-color: #ffffff;
   font-family: Roboto, sans-serif;
-}
-
-@media screen and (max-width: 1599px) {
-  body {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
 }
 
 h1,
@@ -108,7 +102,7 @@ a {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
@@ -198,41 +192,6 @@ section {
   fill: #ffffff;
 }
 
-.menu-toggle {
-  display: none;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  position: absolute;
-  right: 0;
-  top: 10px;
-}
-
-@media screen and (max-width: 767px) {
-  .menu-toggle {
-    display: inline-flex;
-  }
-}
-
-.menu-container {
-  background-color: #fff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  padding: 48px 40px;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  max-width: 480px;
-  max-height: 796px;
-  display: none;
-}
-
-.menu-container.is-open {
-  display: block;
-}
-
 @media screen and (min-width: 768px) {
   nav {
     display: flex;
@@ -292,12 +251,31 @@ section {
   margin-right: 50px;
 }
 
+header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  max-width: 1600px;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+}
+
 header .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border-bottom: 3px solid #f5f4fa;
-  position: relative;
 }
 
 .auth {
@@ -311,12 +289,34 @@ header .container {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .auth {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth {
+    flex-direction: row;
+  }
+}
+
 .auth__link {
   color: #212121;
 }
 
-.auth__item + .auth__item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .auth__item + .auth__item {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .auth__item + .auth__item {
+    margin-left: 50px;
+    margin-top: 0;
+  }
 }
 
 .auth__link > .auth__icon {
@@ -330,48 +330,139 @@ header .container {
   fill: #2196f3;
 }
 
+.menu-toggle {
+  display: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  line-height: 0;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-toggle {
+    display: inline-flex;
+  }
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+}
+
+.menu-toggle:hover .icon-menu {
+  fill: #2196f3;
+}
+
+.menu-container {
+  background-color: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  padding: 48px 40px;
+  text-align: center;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  max-width: 480px;
+  max-height: 796px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+}
+
+.menu-container.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.menu__nav {
+  height: 212px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu__item {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
+.menu__item .link {
+  color: #212121;
+}
+
+.menu__item .link--current {
+  color: #2196f3;
+}
+
+.menu__auth--tel {
+  font-weight: 500;
+  font-size: 7vw;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.menu__auth--mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+  margin-top: 32px;
+}
+
+.menu__networks {
+  margin-top: 64px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.menu__networks--item {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.menu__networks--item a {
+  color: inherit;
+}
+
 .hero {
   margin: 0 auto;
   padding-right: 0px;
   padding-left: 0px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #2f303a;
   text-align: center;
-  max-width: 1600px;
-  max-height: 600px;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 480px;
+  height: 400px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url "../../img/hero_mob-min";
 }
 
-@media screen and (max-width: 767px) {
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    width: 480px;
-    background-size: cover;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/Header_img.jpg ");
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero {
-    width: 768px;
-    background-size: 768px 400px;
-  }
-}
-
-@media screen and (max-width: 1599px) {
-  .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
-}
-
-@media screen and (min-width: 1600px) {
-  .hero {
-    width: 1600px;
-    background-size: 1600px 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-size: cover;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/headeimg.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/hero_mob@2x-min");
   }
 }
 
