--- a/sass/components/common/_common-styles.scss
+++ b/sass/components/common/_common-styles.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  cursor: default;
 }
 *,
 *::before,
@@ -9,11 +10,6 @@ html {
 body {
   background-color: #ffffff;
   font-family: Roboto, sans-serif;
-
-  @media screen and (max-width: 1599px) {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
 }
 
 h1,
@@ -37,10 +33,10 @@ ul {
 }
 
 .container {
-  // width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  // min-height: 100vh;
 
   @media screen and (min-width: 480px) {
     width: 480px;
@@ -50,7 +46,7 @@ ul {
     width: 768px;
   }
 
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: 1200px) {
     width: 1200px;
   }
 }
