--- a/sass/components/hero-section/_hero.scss
+++ b/sass/components/hero-section/_hero.scss
@@ -2,59 +2,72 @@
   margin: 0 auto;
   padding-right: 0px;
   padding-left: 0px;
+  padding-top: 118px;
+  padding-bottom: 118px;
 
   background-color: $extra-background-color;
 
   text-align: center;
-  max-width: 1600px;
-  max-height: 600px;
+  // max-width: 1600px;
+  // max-height: 600px;
 
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 
-  @media screen and (max-width: 767px) {
-    width: 480px;
-    background-size: cover;
+  max-width: 480px;
+  height: 400px;
+
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url ("../../img/hero_mob-min");
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/Header_img.jpg ");
-  }
-
-  // @media screen and (max-width: 767px) {
-  //   padding-left: 60px;
-  //   padding-right: 60px;
-  // }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    background-size: 768px 400px;
-  }
-
-  @media screen and (max-width: 1599px) {
-    padding-top: 118px;
-    padding-bottom: 118px;
-    // padding-left: 204px;
-    // padding-right: 204px;
-  }
-
-  @media screen and (min-width: 1600px) {
-    width: 1600px;
-    background-size: 1600px 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
-
-    background-size: cover;
-    background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../img/headeimg.jpg");
+      url("../../img/hero_mob@2x-min");
   }
 }
+
+// @media screen and (max-width: 767px) {
+//   padding-left: 60px;
+//   padding-right: 60px;
+// }
+
+// @media screen and (min-width: 768px) {
+//   width: 768px;
+//   background-size: 768px 400px;
+// }
+
+// @media screen and (max-width: 1599px) {
+
+//   // padding-left: 204px;
+//   // padding-right: 204px;
+// }
+
+//   @media screen and (min-width: 1200px) {
+//     width: 1600px;
+
+//     padding-top: 200px;
+//     padding-bottom: 200px;
+
+//     background-size: cover;
+//     background-image: linear-gradient(
+//         to right,
+//         rgba(47, 48, 58, 0.4),
+//         rgba(47, 48, 58, 0.4)
+//       ),
+//       url("../img/headeimg.jpg");
+//   }
+// }
 
 .hero__title {
   font-weight: 900;
