--- a/sass/components/page-header/_auth.scss
+++ b/sass/components/page-header/_auth.scss
@@ -2,11 +2,15 @@
   @extend %list;
   display: flex;
   margin-left: auto;
-  // height: 100%;
-  // padding-top: 32px;
-  // padding-bottom: 32px;
+
   @media screen and (max-width: 767px) {
     display: none;
+  }
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
   }
 }
 .auth__link {
@@ -19,9 +23,14 @@
   }
 }
 
-.auth__item {
-  & + .auth__item {
+.auth__item + .auth__item {
+  @media screen and (min-width: 768px) {
+    margin-left: 0;
+    margin-top: 10px;
+  }
+  @media screen and (min-width: 1200px) {
     margin-left: 50px;
+    margin-top: 0;
   }
 }
 
