--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ ul, .auth {
   margin: 0;
 }
 
-.card-set, .project-card {
+.project-card {
   display: flex;
   text-align: left;
   justify-content: space-between;
@@ -30,7 +30,7 @@ ul, .auth {
   color: #2196f3;
 }
 
-.clients__title, .team__title, .team__list, .projects__title {
+.projects__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -109,7 +109,18 @@ a {
 }
 
 section {
-  padding-top: 94px;
+  padding-top: 60px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 1200px) {
+  section {
+    padding-top: 94px;
+  }
+}
+
+body .modal-open {
+  overflow: hidden;
 }
 
 .logo {
@@ -252,23 +263,9 @@ section {
 }
 
 header {
-  padding-top: 16px;
-  padding-bottom: 16px;
   max-width: 1600px;
-}
-
-@media screen and (min-width: 768px) {
-  header {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-  }
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header .container {
@@ -346,7 +343,9 @@ header .container {
   }
 }
 
-.menu-container .menu-toggle {
+.menu-toggle-close {
+  display: block;
+  border: 1px solid #000000;
   position: absolute;
   top: 10px;
   right: 15px;
@@ -354,7 +353,17 @@ header .container {
   height: 40px;
 }
 
-.menu-toggle:hover .icon-menu {
+.menu-toggle-close:hover {
+  border: none;
+}
+
+.icon-close,
+.icon-menu {
+  fill: #212121;
+}
+
+.menu-toggle:hover .icon-menu,
+.menu-toggle:hover .icon-close {
   fill: #2196f3;
 }
 
@@ -367,9 +376,9 @@ header .container {
   z-index: 100;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  max-width: 480px;
+  width: 100%;
+  height: 100%;
+  max-width: 768px;
   max-height: 796px;
   opacity: 0;
   visibility: hidden;
@@ -383,7 +392,7 @@ header .container {
 .menu-container.is-open {
   opacity: 1;
   visibility: visible;
-  pointer-events: all;
+  pointer-events: initial;
 }
 
 .menu__nav {
@@ -428,8 +437,9 @@ header .container {
 .menu__networks {
   margin-top: 64px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  max-width: 357px;
 }
 
 .menu__networks--item {
@@ -457,12 +467,41 @@ header .container {
   background-size: cover;
   max-width: 480px;
   height: 400px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url "../../img/hero_mob-min";
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_mob-min.jpg");
 }
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img/hero_mob@2x-min");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_mob@2x-min.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_tablet-min.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_tablet@2x-min.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_dextop-min.jpg");
+  }
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero_dextop@2x-min.jpg");
   }
 }
 
@@ -477,7 +516,7 @@ header .container {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 1599px) {
+@media screen and (max-width: 1199px) {
   .hero__title {
     font-size: 26px;
     line-height: 1.62;
@@ -485,7 +524,7 @@ header .container {
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .hero__title {
     font-size: 44px;
     line-height: 1.36;
@@ -513,27 +552,68 @@ header .container {
   background-color: #188ce8;
 }
 
-.clients {
-  padding-bottom: 94px;
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-bottom: 94px;
+  }
+}
+
+.clients__title {
+  display: block;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .clients__list {
   display: flex;
-  height: 92px;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -40px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    flex-wrap: nowrap;
+    height: 92px;
+  }
 }
 
 .clients__item {
-  width: 170px;
   width: 100%;
   height: 100%;
-}
-
-.clients__item + .clients__item {
+  flex-basis: calc(100% / 2 - 30px);
+  margin-top: 30px;
   margin-left: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .clients__item {
+    width: 226px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    width: 170px;
+  }
+}
+
 .clients__link {
-  padding: 0;
+  padding: 16px 52px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -547,8 +627,10 @@ header .container {
   border: 1px solid #2196f3;
 }
 
-.clients__link:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .clients__link {
+    padding: 0;
+  }
 }
 
 .clients__icon {
@@ -561,8 +643,48 @@ header .container {
   fill: #2196f3;
 }
 
+.card-set {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .card-set {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-set {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    display: flex;
+    text-align: left;
+    justify-content: space-between;
+  }
+}
+
 .card-set__item + .card-set__item {
-  margin-left: 30px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .card-set__item {
+    margin-top: 0;
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card-set__item .card-set__item + .card-set__item {
+    margin-left: 30px;
+  }
 }
 
 .card-set__title {
@@ -603,8 +725,15 @@ header .container {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+  padding-top: 93px;
+  padding-bottom: 94px;
+  padding-left: 15px;
+  padding-right: 15px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
   transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -615,16 +744,22 @@ header .container {
 }
 
 .modal {
-  position: absolute;
-  min-width: 528px;
-  min-height: 581px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
+  padding: 40px;
+  background-color: #fff;
+  position: relative;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+    width: 100%;
+  }
 }
 
 .close {
@@ -639,9 +774,6 @@ header .container {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .close:hover {
@@ -808,23 +940,94 @@ textarea {
 }
 
 .team {
-  background-color: #f5f4fa;
-  max-width: 1600px;
+  background-color: #ffffff;
+  max-width: 480px;
   margin: 0 auto;
-  padding-bottom: 94px;
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    background-color: #f5f4fa;
+    max-width: 1600px;
+    padding-bottom: 94px;
+  }
+}
+
+.team__title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding-top: 60px;
+  padding-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .team__list {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .team__card {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.team__card + .team__card {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__card {
+    margin-top: 0;
+    flex-basis: calc(100% / 2 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__card .team__card + .team__card {
+    margin-left: 30px;
+  }
+}
+
 .team__thumb {
+  text-align: center;
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
@@ -847,6 +1050,16 @@ textarea {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+.projects {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .projects {
+    display: block;
+  }
 }
 
 .project-card__item + .project-card__item {
@@ -1013,7 +1226,7 @@ textarea {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1600px;
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   background-color: #2f303a;
@@ -1021,6 +1234,19 @@ textarea {
 
 .footer .container {
   display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    max-width: 1600px;
+  }
 }
 
 .footer .logo {
