--- a/sass/components/clients-section/_clients.scss
+++ b/sass/components/clients-section/_clients.scss
@@ -1,27 +1,66 @@
 .clients {
-  padding-bottom: 94px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+  }
 }
 .clients__title {
-  @extend %section-title;
+  display: block;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: $primary-text-color;
+
+  padding-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 .clients__list {
   display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -40px;
 
-  height: 92px;
-}
+  @media screen and (min-width: 768px) {
+  }
 
-.clients__item {
-  width: 170px;
-  width: 100%;
-  height: 100%;
-
-  & + & {
-    margin-left: 30px;
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    height: 92px;
   }
 }
 
+.clients__item {
+  width: 100%;
+  height: 100%;
+  flex-basis: calc(100% / 2 - 30px);
+
+  margin-top: 30px;
+  margin-left: 30px;
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+    flex-basis: calc(100% / 3 - 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
+
+  // & + & {
+  //   margin-left: 30px;
+  // }
+}
+
 .clients__link {
-  padding: 0;
+  padding: 16px 52px;
   width: 100%;
   height: 100%;
 
@@ -34,9 +73,13 @@
   &:focus {
     border: 1px solid $accent-color;
   }
-  &:not(:last-child) {
-    margin-right: 30px;
+
+  @media screen and (min-width: 1200px) {
+    padding: 0;
   }
+  // &:not(:last-child) {
+  //   margin-right: 30px;
+  // }
 }
 
 .clients__icon {
