--- a/sass/components/common/_common-styles.scss
+++ b/sass/components/common/_common-styles.scss
@@ -52,5 +52,14 @@ ul {
 }
 
 section {
-  padding-top: 94px;
+  padding-top: 60px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+  }
+}
+
+body .modal-open {
+  overflow: hidden;
 }
