--- a/sass/components/features-section/_features.scss
+++ b/sass/components/features-section/_features.scss
@@ -1,5 +1,22 @@
 .card-set {
-  @extend %leftedFlex;
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    display: flex;
+    text-align: left;
+    justify-content: space-between;
+  }
 }
 
 .features__title {
@@ -8,7 +25,22 @@
 
 .card-set__item {
   & + & {
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+
+    flex-basis: calc(100% / 2 - 30px);
+
+    margin-top: 30px;
     margin-left: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    .card-set__item + .card-set__item {
+      margin-left: 30px;
+    }
   }
 }
 
