--- a/sass/components/hero-section/_hero.scss
+++ b/sass/components/hero-section/_hero.scss
@@ -8,8 +8,6 @@
   background-color: $extra-background-color;
 
   text-align: center;
-  // max-width: 1600px;
-  // max-height: 600px;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -23,7 +21,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url ("../../img/hero_mob-min");
+    url("../img/hero_mob-min.jpg");
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -33,41 +31,55 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../../img/hero_mob@2x-min");
+      url("../img/hero_mob@2x-min.jpg");
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero_tablet-min.jpg");
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../img/hero_tablet@2x-min.jpg");
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 600px;
+
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero_dextop-min.jpg");
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero_dextop@2x-min.jpg");
   }
 }
-
-// @media screen and (max-width: 767px) {
-//   padding-left: 60px;
-//   padding-right: 60px;
-// }
-
-// @media screen and (min-width: 768px) {
-//   width: 768px;
-//   background-size: 768px 400px;
-// }
-
-// @media screen and (max-width: 1599px) {
-
-//   // padding-left: 204px;
-//   // padding-right: 204px;
-// }
-
-//   @media screen and (min-width: 1200px) {
-//     width: 1600px;
-
-//     padding-top: 200px;
-//     padding-bottom: 200px;
-
-//     background-size: cover;
-//     background-image: linear-gradient(
-//         to right,
-//         rgba(47, 48, 58, 0.4),
-//         rgba(47, 48, 58, 0.4)
-//       ),
-//       url("../img/headeimg.jpg");
-//   }
-// }
 
 .hero__title {
   font-weight: 900;
@@ -80,13 +92,13 @@
   margin-top: 0;
   margin-bottom: 30px;
 
-  @media screen and (max-width: 1599px) {
+  @media screen and (max-width: 1199px) {
     font-size: 26px;
     line-height: 1.62;
     width: 360px;
   }
 
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
     width: 696px;
