--- a/sass/components/modal-window/_modal-form.scss
+++ b/sass/components/modal-window/_modal-form.scss
@@ -1,14 +1,23 @@
 .backdrop {
   position: fixed;
-
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
 
-  background: rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+
+  padding-top: 93px;
+  padding-bottom: 94px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+
+  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   transition: visibility 250ms $timing-function, opacity 250ms $timing-function;
 }
@@ -20,21 +29,22 @@
 }
 
 .modal {
-  position: absolute;
+  padding: 40px;
+  background-color: #fff;
+  position: relative;
 
-  min-width: 528px;
-  min-height: 581px;
+  @media screen and (min-width: 480px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+    width: 100%;
+  }
 
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  background: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
-  padding: 40px;
 }
 
 .close {
@@ -53,11 +63,6 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
   background-color: $extra-title-color;
-  @include centeredFlex;
-
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
 }
 
 .close:hover {
