--- a/sass/components/page-footer/_footer.scss
+++ b/sass/components/page-footer/_footer.scss
@@ -1,14 +1,22 @@
 .footer {
   .container {
     display: flex;
+    flex-direction: column;
   }
 
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 1600px;
+  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   background-color: $extra-background-color;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+  }
 
   .logo {
     color: $extra-title-color;
@@ -16,7 +24,6 @@
     margin-bottom: 20px;
   }
 }
-
 .footer__text {
   font-size: 14px;
   line-height: 1.71;
