--- a/sass/components/page-header/_header.scss
+++ b/sass/components/page-header/_header.scss
@@ -1,21 +1,7 @@
 header {
-  padding-top: 16px;
-  padding-bottom: 16px;
   max-width: 1600px;
-
-  // @media screen and (min-width: 480px) {
-  //   width: 480px;
-  // }
-
-  @media screen and (min-width: 768px) {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding-top: 24px;
-    padding-bottom: 25px;
-  }
+  margin-left: auto;
+  margin-right: auto;
 
   .container {
     // @include centeredFlex(space-between);
@@ -24,6 +10,5 @@ header {
     justify-content: space-between;
 
     border-bottom: 3px solid $buttons-color;
-    // position: relative;
   }
 }
