--- a/sass/components/page-header/_menu-container.scss
+++ b/sass/components/page-header/_menu-container.scss
@@ -9,9 +9,9 @@
   z-index: 100;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  max-width: 480px;
+  width: 100%;
+  height: 100%;
+  max-width: 768px;
   max-height: 796px;
 
   opacity: 0;
@@ -21,7 +21,7 @@
   &.is-open {
     opacity: 1;
     visibility: visible;
-    pointer-events: all;
+    pointer-events: initial;
   }
 
   display: flex;
@@ -70,12 +70,15 @@
 
   margin-top: 32px;
 }
+
 .menu__networks {
   margin-top: 64px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  max-width: 357px;
 }
+
 .menu__networks--item {
   font-weight: 500;
   font-size: 18px;
