--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -1,24 +1,82 @@
 .team {
-  background-color: $buttons-color;
-  max-width: 1600px;
+  background-color: $extra-title-color;
+  max-width: 480px;
   margin: 0 auto;
 
-  padding-bottom: 94px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-color: $buttons-color;
+    max-width: 1600px;
+    padding-bottom: 94px;
+  }
 }
 .team__title {
-  @extend %section-title;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.18;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: $primary-text-color;
+
+  padding-top: 60px;
+  padding-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .team__list {
-  @include centeredFlex(space-between);
-  @extend %section-title;
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .team__card {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  & + & {
+    margin-top: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+
+    flex-basis: calc(100% / 2 - 30px);
+
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    .team__card + .team__card {
+      margin-left: 30px;
+    }
+  }
 }
 
 .team__thumb {
+  text-align: center;
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: $extra-title-color;
