--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@ ul, .auth {
 
 html {
   box-sizing: border-box;
-  cursor: default;
 }
 
 *,
@@ -126,25 +125,18 @@ body .modal-open {
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #000000;
 }
 
-@media screen and (max-width: 767px) {
-  .logo {
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
+header .logo {
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
-@media screen and (max-width: 1599px) {
-  .logo {
-    font-size: 24px;
-    line-height: 1.17;
-  }
-}
-
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .logo {
     font-size: 26px;
     line-height: 1.19;
@@ -550,6 +542,10 @@ header .container {
 .hero__button:focus {
   color: #ffffff;
   background-color: #188ce8;
+}
+
+.clients {
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1021,6 +1017,10 @@ textarea {
 }
 
 @media screen and (min-width: 1200px) {
+  .team__card {
+    margin-left: 0;
+    flex-basis: calc(100% / 4 - 30px);
+  }
   .team__card .team__card + .team__card {
     margin-left: 30px;
   }
@@ -1224,6 +1224,7 @@ textarea {
 }
 
 .footer {
+  height: 603px;
   padding-top: 60px;
   padding-bottom: 60px;
   max-width: 480px;
@@ -1232,20 +1233,42 @@ textarea {
   background-color: #2f303a;
 }
 
-.footer .container {
-  display: flex;
-  flex-direction: column;
-}
-
 @media screen and (min-width: 768px) {
   .footer {
     max-width: 768px;
+    height: 463px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer {
     max-width: 1600px;
+    height: 252px;
+  }
+}
+
+.footer .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .footer .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 }
 
@@ -1253,6 +1276,13 @@ textarea {
   color: #ffffff;
   display: block;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .logo {
+    text-align: left;
+  }
 }
 
 .footer__text {
@@ -1262,6 +1292,7 @@ textarea {
   color: #ffffff;
   margin-bottom: 9px;
   font-style: inherit;
+  text-align: center;
 }
 
 .footer__link {
@@ -1272,18 +1303,41 @@ textarea {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.footer__contacts {
+  text-align: center;
+}
+
 .footer__contacts:not(:last-child) {
   margin-bottom: 9px;
 }
 
 .footer__networks {
   padding: 0;
-  margin-left: 70px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__networks {
+    margin-left: 165px;
+    margin-top: 5px;
+    margin-bottom: 102px;
+    height: 80px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__networks {
+    margin-left: 70px;
+  }
 }
 
 .footer__networks .networks {
   height: 44px;
-  margin-top: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__networks .networks {
+    margin-top: 20px;
+  }
 }
 
 .networks__link--footer {
@@ -1301,27 +1355,64 @@ textarea {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  padding-top: 12px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__title {
+    padding-bottom: 0;
+    padding-top: 12px;
+  }
 }
 
 .footer__form {
   display: block;
-  margin-left: 93px;
-  margin-right: 0;
+  margin: 0;
   padding: 0;
-  width: 570px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__form {
+    padding-left: 166px;
+    padding-right: 153px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    width: 570px;
+    margin-left: 93px;
+  }
 }
 
 .subscription {
-  height: 50px;
-  margin-top: 20px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription {
+    height: 50px;
+    margin-top: 20px;
+    flex-direction: row;
+  }
 }
 
 .subscription__mail {
-  width: 358px;
+  width: 100%;
   height: 100%;
-  margin-right: 12px;
+  height: 50px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__mail {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .subscription__label {
@@ -1351,6 +1442,7 @@ textarea::placeholder {
 .subscription__action {
   width: 200px;
   height: 100%;
+  margin-top: 20px;
   margin-right: 0;
 }
 
