--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -1,21 +1,18 @@
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
 
   letter-spacing: 0.03em;
   color: $title-text-color;
 
-  @media screen and (max-width: 767px) {
+  header & {
     padding-top: 16px;
     padding-bottom: 16px;
   }
 
-  @media screen and (max-width: 1599px) {
-    font-size: 24px;
-    line-height: 1.17;
-  }
-
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: 1200px) {
     font-size: 26px;
     line-height: 1.19;
   }
