--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -69,6 +69,9 @@
   }
 
   @media screen and (min-width: 1200px) {
+    margin-left: 0;
+    flex-basis: calc(100% / 4 - 30px);
+
     .team__card + .team__card {
       margin-left: 30px;
     }
