--- a/css/main.css
+++ b/css/main.css
@@ -1094,6 +1094,28 @@ textarea {
   color: #ffffff;
 }
 
+.overlay {
+  width: 450px;
+  position: absolute;
+  height: 100%;
+  height: 357px;
+  width: 100%;
+  top: 0;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .overlay {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .overlay {
+    width: 370px;
+  }
+}
+
 .project__link {
   position: relative;
   display: block;
@@ -1118,7 +1140,6 @@ textarea {
   width: 100%;
   height: 100%;
   top: 0;
-  height: 294px;
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1128,15 +1149,6 @@ textarea {
   transform: translateY(0);
 }
 
-.overlay {
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  width: 100%;
-  top: 0;
-  overflow: hidden;
-}
-
 .portfolio {
   padding-bottom: 94px;
 }
@@ -1144,8 +1156,18 @@ textarea {
 .button-set {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   margin-bottom: 32px;
+  padding-right: 103px;
+}
+
+@media screen and (min-width: 1200px) {
+  .button-set {
+    flex-wrap: nowrap;
+    padding-right: 0;
+    justify-content: center;
+  }
 }
 
 .button-set__item + .button-set__item {
@@ -1153,6 +1175,7 @@ textarea {
 }
 
 .button-set__button {
+  margin-top: 15px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -1167,6 +1190,12 @@ textarea {
   border: 1px solid transparent;
   border-radius: 4px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .button-set__button {
+    margin-top: 0;
+  }
 }
 
 .button-set__button:hover,
@@ -1193,19 +1222,37 @@ textarea {
 }
 
 .portfolio__list {
-  flex-wrap: wrap;
   display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  margin-left: -30px;
+  flex-direction: column;
   margin-top: -30px;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    margin-left: -30px;
+  }
+}
+
 .project {
-  flex-basis: calc(100% / 3-30px);
-  margin-left: 30px;
   margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .project {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project {
+    flex-basis: calc(100% / 3 - 60px);
+  }
 }
 
 .project__link:hover,
@@ -1384,6 +1431,8 @@ textarea {
   .footer__form {
     width: 570px;
     margin-left: 93px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -1399,6 +1448,8 @@ textarea {
     height: 50px;
     margin-top: 20px;
     flex-direction: row;
+    width: 100%;
+    width: 570px;
   }
 }
 
@@ -1444,6 +1495,12 @@ textarea::placeholder {
   height: 100%;
   margin-top: 20px;
   margin-right: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__action {
+    margin-top: 0;
+  }
 }
 
 .subscription__button {
