--- a/sass/components/portfolio/_overlay.scss
+++ b/sass/components/portfolio/_overlay.scss
@@ -1,3 +1,20 @@
+.overlay {
+  width: 450px;
+  position: absolute;
+
+  height: 100%;
+  height: 357px;
+  width: 100%;
+  top: 0;
+
+  overflow: hidden;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
+}
 .project__link {
   position: relative;
   display: block;
@@ -28,7 +45,7 @@
   height: 100%;
 
   top: 0;
-  height: 294px;
+  // height: 294px;
 
   background: rgba(33, 150, 243, 0.9);
 
@@ -38,15 +55,4 @@
   .project__link:hover & {
     transform: translateY(0);
   }
-}
-
-.overlay {
-  position: absolute;
-
-  width: 370px;
-  height: 294px;
-  width: 100%;
-  top: 0;
-
-  overflow: hidden;
 }
