--- a/sass/components/clients-section/_clients.scss
+++ b/sass/components/clients-section/_clients.scss
@@ -15,7 +15,7 @@
 
   color: $primary-text-color;
 
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
@@ -24,35 +24,35 @@
   }
 }
 .clients__list {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
-  margin-left: -40px;
+  margin-left: -30px;
 
   @media screen and (min-width: 768px) {
   }
 
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
-    height: 92px;
+    margin-top: 0;
+    margin-left: 0;
   }
 }
 
 .clients__item {
-  width: 100%;
-  height: 100%;
-  flex-basis: calc(100% / 2 - 30px);
+  height: 92px;
 
   margin-top: 30px;
-  margin-left: 30px;
+  margin-left: 20px;
+  flex-basis: calc(100% / 2 - 30px);
 
   @media screen and (min-width: 768px) {
-    width: 226px;
     flex-basis: calc(100% / 3 - 30px);
   }
 
   @media screen and (min-width: 1200px) {
-    width: 170px;
+    margin-top: 0;
   }
 
   // & + & {
