--- a/sass/components/page-footer/_footer-form.scss
+++ b/sass/components/page-footer/_footer-form.scss
@@ -6,8 +6,9 @@
   width: 100%;
 
   @media screen and (min-width: 768px) {
-    padding-left: 166px;
-    padding-right: 153px;
+    // margin-top: 102px;
+    // padding-left: 166px;
+    // padding-right: 153px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -35,6 +36,7 @@
 
 .subscription__mail {
   width: 100%;
+  width: 450px;
   height: 100%;
   height: 50px;
 
@@ -57,6 +59,7 @@
 
 .subscription__input {
   width: 100%;
+  width: 450px;
   height: 100%;
   background-color: inherit;
 }
