--- a/sass/components/page-footer/_footer.scss
+++ b/sass/components/page-footer/_footer.scss
@@ -1,36 +1,26 @@
 .footer {
-  height: 603px;
-
   padding-top: 60px;
   padding-bottom: 60px;
-  max-width: 480px;
 
-  margin-left: auto;
-  margin-right: auto;
   background-color: $extra-background-color;
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
-    height: 463px;
   }
 
   @media screen and (min-width: 1200px) {
-    max-width: 1600px;
-
-    height: 252px;
   }
 
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 100%;
 
     @media screen and (min-width: 768px) {
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-around;
       align-items: flex-start;
     }
     @media screen and (min-width: 1200px) {
@@ -74,18 +64,29 @@
 
 .footer__contacts {
   text-align: center;
+  font-style: normal;
+
   &:not(:last-child) {
     margin-bottom: 9px;
   }
 }
 
+.footer__address {
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+}
+
 .footer__networks {
   padding: 0;
+  margin-bottom: 60px;
+
   @media screen and (min-width: 768px) {
-    margin-left: 165px;
-    margin-top: 5px;
+    // margin-left: 165px;
+    // margin-top: 5px;
     margin-bottom: 102px;
-    height: 80px;
   }
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
