--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -23,8 +23,11 @@
 
   color: $primary-text-color;
 
-  padding-top: 60px;
-  padding-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  // padding-top: 60px;
+  //
 
   @media screen and (min-width: 1200px) {
     font-size: 36px;
@@ -70,10 +73,12 @@
 
   @media screen and (min-width: 1200px) {
     margin-left: 0;
+
     flex-basis: calc(100% / 4 - 30px);
 
     .team__card + .team__card {
       margin-left: 30px;
+      margin-top: 0;
     }
   }
 }
