--- a/css/main.css
+++ b/css/main.css
@@ -591,7 +591,7 @@ header .container {
 .clients__item {
   height: 92px;
   margin-top: 30px;
-  margin-left: 20px;
+  margin-left: 30px;
   flex-basis: calc(100% / 2 - 30px);
 }
 
@@ -608,7 +608,6 @@ header .container {
 }
 
 .clients__link {
-  padding: 16px 52px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -999,6 +998,8 @@ textarea {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 0;
+    margin-left: 0;
   }
 }
 
@@ -1022,9 +1023,10 @@ textarea {
 @media screen and (min-width: 1200px) {
   .team__card {
     margin-left: 0;
+    margin-top: 0;
     flex-basis: calc(100% / 4 - 30px);
   }
-  .team__card .team__card + .team__card {
+  .team__card + .team__card {
     margin-left: 30px;
     margin-top: 0;
   }
@@ -1159,7 +1161,7 @@ textarea {
 .button-set {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: left;
   flex-wrap: wrap;
   margin-bottom: 40px;
   padding-right: 103px;
@@ -1168,6 +1170,8 @@ textarea {
 @media screen and (min-width: 768px) {
   .button-set {
     margin-bottom: 30px;
+    padding-right: 0;
+    justify-content: center;
   }
 }
 
@@ -1180,12 +1184,15 @@ textarea {
   }
 }
 
+.button-set__item {
+  margin-top: 15px;
+}
+
 .button-set__item + .button-set__item {
   margin-left: 8px;
 }
 
 .button-set__button {
-  margin-top: 15px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -1248,11 +1255,15 @@ textarea {
   }
 }
 
+.project {
+  margin-top: 30px;
+  display: flex;
+}
+
 @media screen and (min-width: 768px) {
   .project {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
-    margin-top: 30px;
   }
 }
 
@@ -1260,6 +1271,11 @@ textarea {
   .project {
     flex-basis: calc(100% / 3 - 60px);
   }
+}
+
+.project__link {
+  display: flex;
+  flex-direction: column;
 }
 
 .project__link:hover,
@@ -1275,6 +1291,7 @@ textarea {
   border-bottom: 1px solid #f5f4fa;
   border-left: 1px solid #f5f4fa;
   border-right: 1px solid #f5f4fa;
+  flex-grow: 1;
 }
 
 .footer {
@@ -1339,8 +1356,11 @@ textarea {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__contacts {
+address {
   font-style: normal;
+}
+
+.footer__contacts {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1381,6 +1401,7 @@ textarea {
 @media screen and (min-width: 1200px) {
   .footer__networks {
     margin-left: 70px;
+    margin-bottom: 0;
   }
 }
 
