--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -54,6 +54,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 0;
+    margin-left: 0;
   }
 }
 
@@ -73,10 +75,11 @@
 
   @media screen and (min-width: 1200px) {
     margin-left: 0;
+    margin-top: 0;
 
     flex-basis: calc(100% / 4 - 30px);
 
-    .team__card + .team__card {
+    & + & {
       margin-left: 30px;
       margin-top: 0;
     }
